# video-auto-cut

./: .gitignore  README.md  init_pipeline.ipynb  pyproject.toml
app/backend/: main.py  utils.py
app/backend/pipeline/: LLM_diarization.py  pipeline.py  summarize.py  transcribe.py  video_utils.py
app/backend/static/: index.html  style.css
